--- a/style.css
+++ b/style.css
@@ -16,8 +16,11 @@
     --white: #ffffff;
 }
 body {
-    font-family: "allotrope-variable", sans-serif;
-    font-variation-settings: "wght" 400, "wdth" 100;
+    /* font-family: "allotrope-variable", sans-serif;
+    font-variation-settings: "wght" 400, "wdth" 100; */
+    font-family: "nicholas", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     height: 100dvh;
     color: var(--dark);
     overflow-y: hidden;
@@ -66,7 +69,7 @@ main.graph-sect #graph-background {
 }
 
 
-/* SECTIONS */
+/* SCROLLING */
 
 main {
     scroll-snap-type: y mandatory;
@@ -82,93 +85,158 @@ section {
     align-items: center;
     justify-content: center;
 }
-h1, h2 {
+
+
+/* TEXT */
+
+h1 {
+    font-family: "nicholas", sans-serif;
+    font-weight: 400;
+    font-style: italic;
     width: min(60rem, 90vw);
+    font-size: 4rem;
+    color: var(--dark);
     text-align: center;
     text-wrap: pretty;
 }
-h1 {
-    font-size: 3rem;
-    color: var(--dark);
-}
-em {
-    font-family: "alkaline", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1.375em;
-    color: var(--light);
-    text-decoration: 0.05em underline;
-}
 h2 {
-    font-size: 1.75rem;
+    font-size: 2rem;
     line-height: 1.2;
+    text-wrap: pretty;
 }
-
-/* QUOTES */
-
-.anecdotes {
-    display: flex;
-    flex-direction: column;
+#intro h2 {
+    text-align: center;
+    text-wrap: balance;
 }
 blockquote {
-    font-family: "alkaline", sans-serif;
-    font-size: 1.75rem;
-    line-height: 1.4;
-    width: min(40rem, 60vw);
-    margin-block: 3.25rem;
-    text-wrap: pretty;
-    color: var(--dark);
-    position: relative;
-}
-blockquote::before, blockquote::after {
-    content: "";
-    display: block;
-    width: 3rem;
-    height: 3rem;
-    background-image: url(quotes.svg);
-    position: absolute;
-}
-blockquote::before {
-    rotate: 180deg;
-    left: 0;
-    top: 0;
-    translate: 0% -120%;
-}
-blockquote::after {
-    right: 0;
-    bottom: 0;
-    translate: 0% 120%;
-}
-.demo-cats {
-    color: var(--light);
-    font-size: 1.25rem;
-}
-
-/* FOOTER */
-
-#content-5 {
+    font-family: "nicholas", sans-serif;
+    font-weight: 400;
+    font-style: italic;
     display: flex;
     flex-direction: column;
+}
+blockquote p {
+    font-size: 1.5rem;
+    line-height: 1.25;
+    color: var(--dark);
+    text-wrap: pretty;
+}
+.quote-mark {
+    display: block;
+    width: 2rem;
+    height: 2rem;
+}
+.quote-left {
+    rotate: 180deg;
+}
+.quote-right {
+    align-self: end;
+}
+
+/* SECTION GRIDS */
+
+section {
+    padding: 2rem;
+}
+.content {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 2fr;
+    grid-template-areas: "title title .    "
+                         "quote graph graph";
+    gap: 1.5rem;
+    align-items: center;
+    justify-content: center;
+}
+.content h2 {
+    grid-area: title;
+}
+.content blockquote {
+    grid-area: quote;
+}
+.content > div {
+    grid-area: graph;
+    width: 100%;
+    height: 100%;
+    background: #ffffff55;
+    padding: 1rem;
+}
+
+
+/* GRAPHS */
+
+figure {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    position: relative;
+    gap: 0.5rem;
+    margin-bottom: 5rem;
+}
+figcaption {
+    width: 100%;
+    font-family: "nicholas", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    height: auto;
+}
+.chart, figure img, .side-axis-labels, .key {
+    height: 100%;
+    width: 100%;
+}
+figure img {
+    display: block;
+    padding-block: 0.5rem;
+}
+.chart {
     position: relative;
 }
-footer {
+.axis-labels div, .key-label, .bottom-axis-labels div, .bottom-axis-title {
+    text-align: center;
+    font-size: 0.875rem;
+}
+h3 {
+    margin-bottom: 1rem;
+}
+.axis-title, h3 {
+    font-weight: 700;
+    text-align: center;
+}
+.bottom-axis-labels {
+    display: flex;
+}
+.bottom-axis-title, .bottom-axis-labels {
+    width: 100%;
     position: absolute;
-    bottom: 2rem;
 }
-a {
-    color: var(--light);
+.bottom-axis-title {
+    bottom: -3rem;
 }
-
-/* TABLEAU GRAPHS */
-
-.tableauPlaceholder, .tableauPlaceholder iframe {
-    width: 80vw;
-    height: 50vh;
+.side-axis-title, .side-axis-labels, .key {
+    flex: 0;
 }
-/* #dashboard-spacer, #tab-dashboard-region, .tab-zone-padding, .tab-textRegion-boundary, .tvimagesNS {
-    background: none !important;
-    background-color: none !important;
+.side-axis-title {
+    text-align: center;
+    position: relative;
+    left: 0;
+    top: 50%;
+    translate: 0 -50%;
+    height: 1rem;
+    margin-right: 0.5rem;
 }
-#toolbar-container {
-    display: none !important;
-} */
+.key {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin-left: 0.5rem;
+}
+.key-color {
+    width: 0.75rem;
+    height: 0.75rem;
+    margin: 0.0625rem;
+    border-radius: 20%;
+}
+.key > div {
+    display: flex;
+    gap: 0.25rem;
+}
