--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ blockquote p {
     align-self: end;
 }
 
+
 /* SECTION GRIDS */
 
 section {
@@ -140,11 +141,12 @@ section {
 }
 .content {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr 2fr;
-    grid-template-areas: "title title .    "
-                         "quote graph graph";
-    gap: 1.5rem;
+    grid-template-columns: auto 0.125rem auto auto;
+    grid-template-rows: auto 0.125rem auto;
+    grid-template-areas: "title title title .    "
+                         "rule1 rule1 rule1 rule1"
+                         "quote rule2 graph graph";
+    gap: 1rem;
     align-items: center;
     justify-content: center;
 }
@@ -154,24 +156,102 @@ section {
 .content blockquote {
     grid-area: quote;
 }
-.content > div {
+.content .graph {
     grid-area: graph;
     width: 100%;
     height: 100%;
     background: #ffffff55;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
-
+.rule-h {
+    width: 100%;
+    height: 0.125rem;
+    background: var(--dark);
+    grid-area: rule1;
+}
+.rule-v {
+    width: 0.125rem;
+    height: 100%;
+    background: var(--dark);
+    grid-area: rule2;
+}
 
 /* GRAPHS */
 
+h3 {
+    font-weight: 700;
+    text-align: center;
+    grid-area: ttl;
+    font-size: 1.25rem;
+    flex: 0;
+}
 figure {
     width: 100%;
-    height: 50%;
-    display: flex;
+    display: grid;
+    grid-template-areas: "sat sal gph key"
+                         ".   .   bal .  "
+                         ".   .   bat .  ";
+    grid-template-columns: min-content min-content 1fr min-content;
+    grid-template-rows: 1fr min-content min-content;
+    text-align: center;
+    flex: 1;
+}
+.chart {
+    grid-area: gph;
+    display: block;
+    padding-block: 0.5rem;
+    width: 100%;
+    height: 100%;
+}
+.side-axis-title {
+    grid-area: sat;
     position: relative;
+    left: 0;
+    top: 50%;
+    translate: 0 -50%;
+    height: 1rem;
+}
+.side-axis-labels {
+    grid-area: sal;
+}
+.bottom-axis-title {
+    grid-area: bat;
+}
+.bottom-axis-labels {
+    display: flex;
+    grid-area: bal;
+}
+.axis-title {
+    font-weight: 700;
+}
+.axis-title, .axis-labels, .key {
+    font-size: 0.875rem;
+}
+.side-axis-labels, .side-axis-title {
+    margin-right: 0.5rem;
+}
+.bottom-axis-title {
+    margin-top: 0.5rem;
+}
+.key {
+    display: flex;
+    flex-direction: column;
     gap: 0.5rem;
-    margin-bottom: 5rem;
+    margin-left: 0.5rem;
+    grid-area: key;
+}
+.key-color {
+    width: 0.75rem;
+    height: 0.75rem;
+    margin: 0.0625rem;
+    border-radius: 10%;
+}
+.key > div {
+    display: flex;
+    gap: 0.25rem;
 }
 figcaption {
     width: 100%;
@@ -179,64 +259,17 @@ figcaption {
     font-weight: 400;
     font-style: normal;
     height: auto;
-}
-.chart, figure img, .side-axis-labels, .key {
-    height: 100%;
-    width: 100%;
-}
-figure img {
-    display: block;
-    padding-block: 0.5rem;
-}
-.chart {
-    position: relative;
-}
-.axis-labels div, .key-label, .bottom-axis-labels div, .bottom-axis-title {
-    text-align: center;
-    font-size: 0.875rem;
-}
-h3 {
-    margin-bottom: 1rem;
-}
-.axis-title, h3 {
-    font-weight: 700;
-    text-align: center;
-}
-.bottom-axis-labels {
-    display: flex;
-}
-.bottom-axis-title, .bottom-axis-labels {
-    width: 100%;
-    position: absolute;
-}
-.bottom-axis-title {
-    bottom: -3rem;
-}
-.side-axis-title, .side-axis-labels, .key {
-    flex: 0;
-}
-.side-axis-title {
-    text-align: center;
-    position: relative;
-    left: 0;
-    top: 50%;
-    translate: 0 -50%;
-    height: 1rem;
-    margin-right: 0.5rem;
-}
-.key {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
-    margin-left: 0.5rem;
+    align-items: center;
+    flex: 0;
 }
-.key-color {
-    width: 0.75rem;
-    height: 0.75rem;
-    margin: 0.0625rem;
-    border-radius: 20%;
+figcaption a {
+    color: var(--light);
+    margin-top: 0.5rem;
+    display: block;
 }
-.key > div {
-    display: flex;
-    gap: 0.25rem;
+figcaption p {
+    display: block;
+    max-width: 40rem;
 }
