--- a/style.css
+++ b/style.css
@@ -67,12 +67,33 @@ main {
 section {
     scroll-snap-stop: always;
     scroll-snap-align: start;
+}
+.snap {
+    width: 100%;
     height: 100dvh;
+    scroll-snap-stop: always;
+    scroll-snap-align: start;
+}
+.sticky-content {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
-    position: relative;
+    padding-inline: 2rem;
+    position: sticky;
+    top: 0;
+    height: 100dvh;
+}
+section.content-1 {
+    height: 100dvh;
+}
+section.content-2 {
+    height: 200dvh;
+}
+section.content-3 {
+    height: 300dvh;
+}
+section.content-4 {
+    height: 400dvh;
 }
 
 
@@ -137,27 +158,12 @@ figcaption a {
 /* INTRO CONTENT */
 
 #intro-content {
-    position: fixed;
-    top: 0;
-    width: 100dvw;
-    height: 100dvh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 2rem;
     pointer-events: none;
-    opacity: 0;
-    transition: opacity 0.5s, translate 0.5s;
-}
-#intro-content.intro-content-active {
-    opacity: 1;
-}
-#intro-content.intro-content-top {
-    translate: 0 100vh;
-}
-#intro-content.intro-content-bottom {
-    translate: 0 -100vh;
 }
 #intro-text {
     max-width: 50rem;
@@ -172,10 +178,9 @@ figcaption a {
     text-wrap: pretty;
     color: var(--dark);
     background: linear-gradient(90deg, #ffffff40 0%, 10%, #ffffffff 50%, 90%, #ffffff40 100%);
-    transition: border-bottom 0.5s;
-}
-.term-active {
-    border-bottom: solid 0.15rem var(--dark);
+    animation: term-underline 1.5s linear;
+    animation-play-state: paused;
+    animation-fill-mode: both;
 }
 .definitions {
     max-width: 50rem;
@@ -183,6 +188,7 @@ figcaption a {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
+    gap: 1rem;
     justify-content: center;
     align-items: center;
 }
@@ -194,16 +200,45 @@ figcaption a {
     font-size: 1.25rem;
     line-height: 1.2;
     grid-area: 1 / 1 / 2 / 2;
-    opacity: 0;
-    transition: opacity 0.5s, translate 0.5s;
+    animation: fade 1.5s linear;
+    animation-play-state: paused;
+    animation-fill-mode: both;
 }
 .definition em {
     border-bottom: solid 0.1rem var(--dark);
 }
-.definition-active {
-    opacity: 1;
+#def-1, #term-1 {
+    animation-delay: calc(1.25s - var(--scroll)*1s);
+}
+#def-2, #term-2 {
+    animation-delay: calc(2.25s - var(--scroll)*1s);
+}
+#def-3, #term-3 {
+    animation-delay: calc(3.25s - var(--scroll)*1s);
 }
 
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+@keyframes term-underline {
+    0% {
+        border-bottom: solid 0 var(--dark);
+    }
+    50% {
+        border-bottom: solid 0.15rem var(--dark);
+    }
+    100% {
+        border-bottom: solid 0 var(--dark);
+    }
+}
 
 /* FOOTER */
 
@@ -218,7 +253,6 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* text-align: center; */
     margin-bottom: 0.75rem;
     position: relative;
 }
