--- a/style.css
+++ b/style.css
@@ -122,6 +122,10 @@ blockquote a {
 figcaption a {
     margin-top: 0.75rem;
 }
+em {
+    border-bottom: solid 0.1rem var(--dark);
+    background: linear-gradient(90deg, #ffffff40 0%, 10%, #ffffffff 50%, 90%, #ffffff40 100%);
+}
 
 
 /* INTRO CONTENT */
@@ -137,7 +141,6 @@ figcaption a {
     line-height: 1;
     text-wrap: pretty;
     color: var(--dark);
-    background: linear-gradient(90deg, #ffffff40 0%, 10%, #ffffffff 50%, 90%, #ffffff40 100%);
     animation: term-underline 1.5s linear;
     animation-play-state: paused;
     animation-fill-mode: both;
@@ -161,9 +164,6 @@ figcaption a {
     animation: fade 1.5s linear;
     animation-play-state: paused;
     animation-fill-mode: both;
-}
-.definition em {
-    border-bottom: solid 0.1rem var(--dark);
 }
 #def-1, #term-1 {
     animation-delay: calc(1.25s - var(--scroll)*1s);
@@ -249,10 +249,6 @@ blockquote p {
     padding-block: 0.5rem;
     color: var(--dark);
     text-wrap: pretty;
-}
-blockquote p em {
-    border-bottom: solid 0.1rem var(--dark);
-    background: linear-gradient(90deg, #ffffff40 0%, 10%, #ffffffff 50%, 90%, #ffffff40 100%);
 }
 .quote-mark {
     display: block;
